<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Rotate!</string>
    <string name="app_name">Rotate</string>
    <string name="rotate">Rotate</string>
    <string name="autorotate">Auto Rotate</string>
    <string name="str_err_1001">can not get the orientation</string>
    <string name="str_msg1">rotate 1</string>
    <string name="str_msg2">rotate 2</string>
    <string name="thread_started">Auto rotating thread fail</string>
    <string name="create_db">Create DB</string>
    <string name="update_db">Update DB</string>
    <string name="insert_data">Insert Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="query_data">Query Data</string>
    <string name="update_data">Update Data</string>

</resources>
